# apple-cfnetwork

./: .clang-format  .gitignore  AvailabilityMacros.h  CFNetwork.c  CMakeLists.txt  cmake.sh
FTP/: CFFTPStream.c  CFFTPStream.h  CFFTPStreamPriv.h
HTTP/: CFHTTPAuthentication.c  CFHTTPAuthentication.h  CFHTTPConnection.c  CFHTTPConnectionPriv.h  CFHTTPFilter.c  CFHTTPMessage.c  CFHTTPMessage.h  CFHTTPMessagePriv.h  CFHTTPServer.c  CFHTTPServerPriv.h  CFHTTPStream.c  CFHTTPStream.h  CFHTTPStreamPriv.h
Headers/: CFHTTPServerPriv.h  CFHost.h  CFNetworkDefs.h  CFServerPriv.h
Host/: CFHost.c  CFHost.h  CFHostPriv.h
NetDiagnostics/: CFNetDiagnostics.c  CFNetDiagnostics.h  CFNetDiagnosticsInternal.h  CFNetDiagnosticsPriv.h  CFNetDiagnosticsProtocol.h  CFNetDiagnosticsProtocolUser.c
NetServices/: CFNetServiceMonitor.c  CFNetServices.c  CFNetServices.h  CFNetServicesPriv.h  DeprecatedDNSServiceDiscovery.c  DeprecatedDNSServiceDiscovery.h
Proxies/: ProxySupport.c
SharedCode/: CFNetConnection.h  CFNetworkSchedule.c  CFNetworkThreadSupport.h  CFServer.c  CFServerPriv.h
Stream/: CFSocketStream.c  CFSocketStream.h  CFSocketStreamImpl.h  CFSocketStreamPriv.h  CFStreamError.c
Tests/CFHostTest/: GNUmakefile  gethostbyname.c
Tests/gethostbyname/: CMakeLists.txt  gethostbyname.c
URL/: _CFURLAccess.c
